We can grab the lat and lon coordinates from the weather API, if helpful

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                             Colorado Hotspots for you to choose from:
                             <div class="Options">
                                 <div class="row">
-                                    <div class="col">
+                                    <div class="col-lg">
                                         <input type="checkbox" class="locationBtn" data-idName="Aspen" value="Aspen"> Aspen
                                     </div>
-                                    <div class="col">
+                                    <div class="col-lg">
                                         <input type="checkbox" class="locationBtn" data-idName="Boulder" value="Boulder"> Boulder
                                     </div>
-                                    <div class="col">
+                                    <div class="col-lg">
                                         <input type="checkbox" class="locationBtn" data-idName="Breckenridge" value="Breckenridge"> Breckenridge
                                     </div>
                                 </div>
@@ -220,7 +220,8 @@
 
             //Array of Markers
 
-            var markers = [{
+            var markers = [
+                {
                 coords: { lat: 39.19110, lng: -106.81750 },
                 content: "<h1>Aspen, CO</h1>"
             },
