playing with animation of logo

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <body>
     <div class="container">
         <div class="jumbo text-center pb-2">
-            <h1 class="title text-center">StayCO</h1>
+            <h1 class="title text-center animated bounceInUp">StayCO</h1>
             <p class="tag-line text-center"> Embracing Colorado Weather One Day at a Time</p>
-            <img class="stayCoImg animated fadeInUpBig" src="./assets/images/bluTxt-StayCO.jpg" alt="stayCO Logo">
+            <img class="stayCoImg animated bounceInDown" src="./assets/images/bluTxt-StayCO.jpg" alt="stayCO Logo">
             <!-- <hr class="my-4"> -->
             <h4 class="mt-3"> Compare weather forecast of popular Colorado travel destinations so you can plan your trip</h4>
 
